[package]
name = "openssl-src"
version = "300.0.9+3.0.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/openssl-src-rs"
description = """
Source of OpenSSL and logic to build it.
"""
exclude = [
  'openssl/fuzz/corpora/*',
  'openssl/pyca-cryptography/*',
  'openssl/wycheproof/*',
  'openssl/boringssl/*',
  'openssl/krb5/*',
  'openssl/test/recipes/*',
  'openssl/gost-engine/*',
  'openssl/demos/*',
]

[features]
default = []
# Enables compilation of the legacy provider, which must be loaded at runtime to use various
# uncommon or insecure algorithms.
legacy = []
# Enables compilation of some older algorithms: md2 (hash), rc5 (block cypher) and enabled use of
# some weaker algorithms in SSL connections. These are generally not recommended for use.
weak-crypto = []
# Enables compilation of the Camellia symmetric key block cypher. Since hardware acceleration for
# it is not available on most systems, this is not as used as AES.
camellia = []
# Enables compilation of International Data Encryption Algorithm (IDEA), a symmetric key block
# cypher sometimes used as an AES128 alternative.
idea = []
# Enables compilation of SEED, a symmetric key block cypher mostly used in South Korea, but
# otherwise not widely supported.
seed = []

[workspace]
members = ['testcrate']
exclude = ['target']

[dependencies]
cc = "1.0"
